full swagger support&final makeOrder func
